@@ -2,7 +2,7 @@
 /*******************************************************************************
 TPB-RSS
 creation: 2014-11-22 10:16 +0000
-  update: 2014-11-26 08:10 +0000
+  update: 2014-11-26 08:29 +0000
 
 usage:
    ?path=/search/cat
@@ -302,6 +302,6 @@ if($_GET['path']) {
 
 
 
-/******************************************************************************/
-exit('ready');
+/******************************************************************** default */
+exit('tpb-rss<br/><a href="http://spenibus.net">spenibus.net</a>');
 ?>
