@@ -1,3 +1,6 @@
+2014-11-26 08:29 +0000
+   - changed default page text
+
 2014-11-26 08:10 +0000
    - added default character encoding (utf-8)
 
